--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,11 +1,14 @@
+
 nav {
+    
     display: flex;
     gap: 10px;
-    align-items: center;
-    max-width: 960px;
+    /* align-items: center; */
+    max-width: 1024px;
     margin: 0 auto;
-    border-bottom: 1px solid #e2e2e2;
+    margin-left: 30px;
     margin-bottom: 40px;
+    margin-top: 5px;
     
   }
   a{
@@ -13,21 +16,22 @@ nav {
     /* margin-left: auto; */
   }
   .navbar {
-    position: fixed;
+
+    position:fixed;
     right: 0%;
     left: 0%;
     top: 0%;
     z-index: 1030;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    justify-content: left;
+    
   
   }
   
   .nav__link {
-    font-size: 1.5rem;
+    font-size: o.8rem;
     color: var(--title-color);
-    font-weight: var(--font-bold);
+    font-weight: 500;
     transition: 0.3s;
   }
   
