--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap");
 
@@ -78,8 +81,11 @@ body {
 }
 
 main {
-  background-color: var(--body-color);
+  background-color: var(--border-color);
   color: var(--text-color);
+  background-image: url('./assets/bubbles.png'); 
+    background-size: contain; 
+    background-position: center; 
 }
 
 h1,
@@ -181,4 +187,7 @@ img {
 .btn:hover {
   animation: button-push 0.3s linear 1;
 }
+
+
+
 
