--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -9,19 +9,12 @@
     height: 250px;
     padding: 0;
     border-radius: var(--border-radius);
-    background-color: var(--container-color);
+    /* background-color: var(--container-color); */
     transition: all 0.3s ease-in-out;
   }
 
-  .services__card img {
-    position: relative;
-    border-radius: var(--border-radius);
-    width: 250px;
   
-    height: 250px;
-    /* object-fit: cover; */
-    /* margin-left: 20px; */
-  }
+ 
   
   .services__card:hover {
     transform: translateY(-10px);
